-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
6bf759b31040fb5d05044cd14d5889fbd19a8942
The newly introduced QTimeZone class uses "Olsen" instead of the correct "Olson" both in the class documentation and in the code itself.
The IANA time zone database is known under various names, one of which is "the Olson database", after its creator, Arthur David Olson:
http://en.wikipedia.org/wiki/Tz_database
See the documentation of the class in the snapshot:
http://doc-snapshot.qt-project.org/qt5-stable/qtimezone.html
In the code, "Olsen" is used in several parameter names and in at least five function names:
QByteArray olsenIdToWindowsId(const QByteArray & olsenId)
QByteArray windowsIdToDefaultOlsenId(const QByteArray & windowsId)
QByteArray windowsIdToDefaultOlsenId(const QByteArray & windowsId, QLocale::Country country)
QList<QByteArray> windowsIdToOlsenIds(const QByteArray & windowsId)
QList<QByteArray> windowsIdToOlsenIds(const QByteArray & windowsId, QLocale::Country country)
This was noticed in the source package of the Qt 5.2-beta1 release. It's possible that it's been already fixed in the code repository.
Since it involves only string substitution, I think it should be better to be fixed before the final release instead of in some subsequent release.
Note that something else can be instead of the correct form of the name, such as "IANA".