src/corelib/tools/qtimezoneprivate.cpp
@@ -477,7 +477,7 @@ QString QTimeZonePrivate::isoOffsetFormat(int offsetFromUtc)
                                           .arg(qAbs(mins) % 60, 2, 10, QLatin1Char('0'));
 }
 
-QByteArray QTimeZonePrivate::olsenIdToWindowsId(const QByteArray &id)
+QByteArray QTimeZonePrivate::ianaIdToWindowsId(const QByteArray &id)
 {
     for (int i = 0; i < zoneDataTableSize; ++i) {
         const QZoneData *data = zoneData(i);
@@ -487,7 +487,7 @@ QByteArray QTimeZonePrivate::olsenIdToWindowsId(const QByteArray &id)
     return QByteArray();
 }
 
-QByteArray QTimeZonePrivate::windowsIdToDefaultOlsenId(const QByteArray &windowsId)
+QByteArray QTimeZonePrivate::windowsIdToDefaultIanaId(const QByteArray &windowsId)
 {
     const quint16 windowsIdKey = toWindowsIdKey(windowsId);
     for (int i = 0; i < windowsDataTableSize; ++i) {
@@ -498,17 +498,17 @@ QByteArray QTimeZonePrivate::windowsIdToDefaultOlsenId(const QByteArray &windows
     return QByteArray();
 }
 
-QByteArray QTimeZonePrivate::windowsIdToDefaultOlsenId(const QByteArray &windowsId,
+QByteArray QTimeZonePrivate::windowsIdToDefaultIanaId(const QByteArray &windowsId,
                                                        QLocale::Country country)
 {
-    const QList<QByteArray> list = windowsIdToOlsenIds(windowsId, country);
+    const QList<QByteArray> list = windowsIdToIanaIds(windowsId, country);
     if (list.count() > 0)
         return list.first();
     else
         return QByteArray();
 }
 
-QList<QByteArray> QTimeZonePrivate::windowsIdToOlsenIds(const QByteArray &windowsId)
+QList<QByteArray> QTimeZonePrivate::windowsIdToIanaIds(const QByteArray &windowsId)
 {
     const quint16 windowsIdKey = toWindowsIdKey(windowsId);
     QList<QByteArray> list;
@@ -524,7 +524,7 @@ QList<QByteArray> QTimeZonePrivate::windowsIdToOlsenIds(const QByteArray &window
     return list;
 }
 
-QList<QByteArray> QTimeZonePrivate::windowsIdToOlsenIds(const QByteArray &windowsId,
+QList<QByteArray> QTimeZonePrivate::windowsIdToIanaIds(const QByteArray &windowsId,
                                                         QLocale::Country country)
 {
     const quint16 windowsIdKey = toWindowsIdKey(windowsId);
